Cambio en package json

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "description": "server for unity app",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "dolivares",
   "license": "ISC"
