updating multiple fix

--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "dependencies": {
     "aws-sdk": "^2.1023.0",
     "body-parser": "^1.19.0",
+    "dotenv": "^16.0.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
-    "fileupload": "^1.0.0",
+    "fileupload": "^0.2.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.9",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pug": "^3.0.2"
   },
   "name": "nodeserver",
   "version": "1.0.0",
